--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ aenum==3.1.15
 aiofiles==24.1.0
 supabase==2.7.4
 postgrest==0.16.8
+gotrue==2.12.4
 aiohappyeyeballs==2.3.4
-aiohttp==3.9.5
+aiohttp>=3.11,<4
 aiosignal==1.3.1
 aiostream==0.5.2
 alembic==1.13.2
@@ -99,7 +100,6 @@ langchain-community==0.3.3
 langchain-core==0.3.12
 langchain-groq==0.2.0
 langchain-openai==0.2.3
-langchain-pinecone==0.2.0
 langchain-text-splitters==0.3.0
 langgraph==0.2.39
 langgraph-checkpoint==2.0.1
@@ -167,9 +167,8 @@ pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
-pydantic==2.8.2
+pydantic>=2.11.7,<3
 pydantic-settings==2.6.0
-pydantic_core==2.20.1
 pydeck==0.9.1
 pydub==0.25.1
 Pygments==2.18.0
@@ -239,7 +238,7 @@ typer==0.12.3
 types-certifi==2021.10.8.3
 types-toml==0.10.8.20240310
 typing-inspect==0.9.0
-typing_extensions==4.12.2
+typing_extensions>=4.14.0,<5
 tzdata==2024.1
 umap==0.1.1
 umap-learn==0.5.6
