--- a/requirements.txt
+++ b/requirements.txt
@@ -250,7 +250,7 @@ watchdog==4.0.2
 watchfiles==0.22.0
 wcwidth==0.2.13
 webrtcvad==2.0.10
-websockets==12.0
+websockets>=13.0,<14
 yarl==1.17.0
 stripe==11.3.0
 typesense==0.21.0
